# home-depot

./: .gitignore  README.md  data_proc.ipynb  data_proc.py  db_cfg.yml  mdl_moomin.py  mdl_scy_moomin.py  ml_model.ipynb  ml_model.py  model.py  moomin_notebook.ipynb  notes.rtf  pyproject.toml  requirements.txt
.ipynb_checkpoints/: data_proc-checkpoint.py  feature_analysis-checkpoint.ipynb  moomin_notebook-checkpoint.ipynb
data/: features.csv  submission.csv
notebooks/: data_proc.ipynb  data_proc_2.ipynb  investigation.ipynb  ml_model.ipynb  ml_model_2.ipynb  scrap.ipynb
notebooks/.ipynb_checkpoints/: data_proc-checkpoint.ipynb  data_proc_2-checkpoint.ipynb  ml_model-checkpoint.ipynb  scrap-checkpoint.ipynb
preproc/: data.py  lang.py
scrap/: nlp_scrapbook.ipynb  scrapbook.ipynb  scrapbook.py
scrap/.ipynb_checkpoints/: scrapbook-checkpoint.ipynb  spacy_scrapbook-checkpoint.ipynb
